spacing issue

--- a/stories/Molecules/Text/Page/page.scss
+++ b/stories/Molecules/Text/Page/page.scss
@@ -10,6 +10,7 @@
   }
   h4 {
     font-family: $Font-Family-ProximaLight;
+    margin-bottom: $spacing-08;
   }
   &--white {
     h2, h4 {
